# Epitech---T-WEB-800

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  cargo.toml  deployment.yaml  docker-compose.yml  normesdecode.md  pourquoirust.md  service.yaml  test.yml
.github/workflows/: main.yml  rust-drink.yml  rust-eat.yml  rust-main.yml  rust-test.yml  rust-travel  rust.yml  service-drink-deploy.yml  service-eat-deploy.yml  service-eat-docker.yml  service-enjoy-deploy.yml  service-sleep-deploy.yml  service-travel-deploy.yml
common/: .env  .env.exemple  Cargo.toml
common/src/: .env  db.rs  google.rs  lib.rs  main.rs
common/src/auth/: mod.rs  routes.rs
common/src/db/: mod.rs
common/src/google/: mod.rs  nearly_place_model.rs
common/src/webserver/: mod.rs
common/tests/: integration.rs
services/auth/: Cargo.toml
services/auth/src/: main.rs
services/drink/: Cargo.toml
services/drink/src/: main.rs
services/eat/: Cargo.toml
services/eat/src/: main.rs  model_restaurant.rs
services/eat/tests/: integration.rs
services/enjoy/: .env  Cargo.toml
services/enjoy/src/: main.rs
services/front/: Cargo.toml
services/front/src/: README.md  main.rs
services/front/src-tauri/: Cargo.toml  tauri.conf.json
services/front/src-tauri/src/: main.rs
services/front/src-tauri/ui/: index.html
services/front/src-tauri/ui/css/: style.css
services/front/src/gui/: button.rs  style.css
services/sleep/: Cargo.toml
services/sleep/src/: main.rs
services/travel/: Cargo.toml
services/travel/src/: .env  lib.rs  main.rs  structure.rs
target 2/: .rustc_info.json
(+3 files in other folders)
