[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {  version = "1.36.0", features = ["full"] }
anyhow = "1.0.80"
reqwest = { version = "0.11.25", features = ["json"] }
serde_json = "1.0.114"
dotenv_codegen = "0.15.0"
serde = { version = "1.0.197", features = ["derive"] }
dirs = "5.0.1"
mysql = "25.0.0"
