[package]
name = "common"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
tokio = {  version = "1.36.0", features = ["full"] }
anyhow = "1.0.80"
reqwest = { version = "0.11.25", features = ["json"] }
serde_json = "1.0.114"
dotenv_codegen = "0.15.0"
serde = { version = "1.0.197", features = ["derive"] }
dirs = "5.0.1"
bcrypt = "0.15.1"
sqlx = { version = "0.5.13", default-features = false, features = ["mysql", "runtime-tokio-rustls"] }
sqlx-macros = "0.7.4"
syn = { version = "2.0", features = ["full"] }
